# mdm

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: build.rs  check.rs  index.rs  init.rs  list.rs  mod.rs  sections.rs  set.rs  sync.rs  update.rs  var.rs
src/core/: app.rs  error.rs  mod.rs
src/core/app/: config_files.rs  get_subcommand.rs  mod.rs  subcommand_from_matches.rs
src/core/ext/: command_ext.rs  mod.rs
src/core/model/: cli_command.rs  command_ctx.rs  config_loader.rs  document_config.rs  mdm_config.rs  mod.rs  node_config.rs  paths_config.rs  schema_config.rs  validable.rs
src/io/: mod.rs  parse.rs  yaml_conf_loader.rs
src/samples/: .gitignore  .mdm.conf  paths.yaml  schema.yaml  vars.yaml
