[package]
name = "mdm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.33"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4.5.54", features = ["cargo"]}
thiserror = "2.0.17"
deunicode = "1.6.2"
walkdir = "2.5.0"