[package]
name = "mdm"
version = "1.0.2"
edition = "2024"
repository = "https://github.com/overGDev/mdm"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.33"
indexmap = { version = "2.14.0", features = ["serde"] }
clap = { version = "4.6.0", features = ["cargo"]}
thiserror = "2.0.18"
deunicode = "1.6.2"
walkdir = "2.5.0"
regex = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
